# noon

./: .env.example  .gitignore  README.md
.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: backend_client.py  main.py  pyproject.toml  time_reference.py  tools.py
agent/schemas/: agent_response.py
backend/: dependencies.py  main.py  pyproject.toml
backend/core/: config.py  dependencies.py
backend/services/: agent_calendar_service.py
backend/tests/: conftest.py  test_agent.py
ios/Noon/: AgentView.swift  ContentView.swift
ios/Noon.xcodeproj/: project.pbxproj
noon-agent/: pyproject.toml
noon-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
noon-agent/noon_agent/: __init__.py  calendar_nodes.py  calendar_router.py  calendar_state.py  config.py  database.py  db_context.py  gcal_auth.py  gcal_wrapper.py  helpers.py  main.py  models.py
noon-agent/tests/: test_endpoint.py
noon-backend/: .env.example  AGENT_API_ENDPOINTS.md  README.md  TESTING_CURL_REQUESTS.md  app.py  dependencies.py  main.py  pyproject.toml  test_auth.py
noon-backend/routers/: agent.py  google_accounts.py
noon-backend/schemas/: agent.py
noon-backend/services/: calendar_agent.py  google_oauth.py  supabase_client.py
noon-backend/tests/: test_calendar_agent_service.py
noon-ios/Noon/: AgentView.swift  AppConfiguration.swift  CalendarsView.swift  ContentView.swift
noon-v2nl/: README.md  main.py
noon-v2nl/tests/: test_transcription.py
(+66 files in other folders)
